--- a/src/active_handout_theme/assets_src/scss/abstracts/_mixins.scss
+++ b/src/active_handout_theme/assets_src/scss/abstracts/_mixins.scss
@@ -53,3 +53,8 @@
     background-size: $hover-width 2px;
   }
 }
+
+@mixin vh($prop, $value) {
+  #{$prop}: #{$value}vh; /* Fallback for browsers that do not support Custom Properties */
+  #{$prop}: calc(var(--vh, 1vh) * $value);
+}
